@@ -65,12 +65,12 @@ endif
 
 # development version
 else if ($JLAB_VERSION == "devel") then
-	set DEFAULT_CLHEP_VERSION    = 2.2.0.8
-	set DEFAULT_QT_VERSION       = 5.5.0
+	set DEFAULT_CLHEP_VERSION    = 2.3.1.1
+	set DEFAULT_QT_VERSION       = 5.5.1
 	set DEFAULT_XERCESC_VERSION  = 3.1.1
-	set DEFAULT_GEANT4_VERSION   = 4.10.01.p02
+	set DEFAULT_GEANT4_VERSION   = 4.10.02.p01
 	set DEFAULT_GEMC_VERSION     = devel
-	set DEFAULT_JANA_VERSION     = 0.7.3
+	set DEFAULT_JANA_VERSION     = 0.7.4p2
 	set DEFAULT_ROOT_VERSION     = 5.34.34
 	set DEFAULT_BANKS_VERSION    = devel
 	set DEFAULT_SCONS_BM_VERSION = devel
